--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Chaining</title>
 </head>
 <body>
-<script src="chaining.js" type="text/javascript" charset="utf-8" async defer></script>
+<h1>Just trying to manipulate an array</h1>
+  <script src="chaining.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
